# MyGame

./: CMakeLists.txt
CMake/: FindSDL2_image.cmake
src/: Game.cpp  Game.h  Source.cpp  TextureManager.cpp  TextureManager.h  main.cpp
